# game-2048-engine

./: .gitignore  Cargo.toml  README.md  clippy.toml
src/: board.rs  direction.rs  game.rs  getopt.rs  input.rs  lib.rs  main.rs  matrix.rs  output.rs  random.rs
src/cache/: lazy.rs  mod.rs  slide_cache.rs
src/engine/: engine.rs  engine_config.rs  engine_core.rs  evaluation.rs  mod.rs  moves.rs  node.rs
