[package]
name = "game-2048-engine"
version = "0.2.0"
authors = ["fuggy <31143422+mrfuggy@users.noreply.github.com>"]
edition = "2018"

description = "The fast rust 2048 game with fully configurable engine using the minimax algorithm with alpha-beta pruning"
homepage = "https://github.com/mrfuggy/game-2048-engine.git"
repository = "https://github.com/mrfuggy/game-2048-engine.git"
readme = "README.md"
keywords = ["2048", "game"]
categories = ["games", "command-line-utilities"]
license = "GPL-3.0-or-later"

[dependencies]
